# QSuspendedScrollBar

./: .gitignore  README.md
Example/: CMakeLists.txt  QExampleWidget.cpp  QExampleWidget.h  QSuspendedScrollBar_Area.cpp  QSuspendedScrollBar_Area.h  QSuspendedScrollBar_ListWidget.cpp  QSuspendedScrollBar_ListWidget.h  main.cpp
Src/: QSuspendedScrollBar.cpp  QSuspendedScrollBar.h  listwidget.qss  res.qrc  scrollbar.qss
